buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
    }
}

plugins {
    id "com.github.hierynomus.license" version "0.11.0"
    id 'com.github.kt3k.coveralls' version '2.4.0'
}

apply plugin: 'java'
apply plugin: "jacoco"
apply plugin: 'idea'

apply from: 'libraries.gradle'
apply from: 'license.gradle'
apply from: 'release.gradle'

apply plugin: 'pmd'

apply plugin: 'com.github.kt3k.coveralls'

sourceCompatibility = 17

// Release version that won't conflict with the bintray plugin
group = "net.saliman"
archivesBaseName = "spring-boot-starter-request-correlation"

// Java 17 started getting a lot pickier about opening classes to other classes.  Tests will need
// some "opens" to work properly.
tasks.withType(Test).configureEach{
    jvmArgs = jvmArgs + ['--add-opens=java.base/java.lang=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.base/java.lang.invoke=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.base/java.util=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.base/java.net=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.base/java.nio.charset=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.base/java.time=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.base/java.util.stream=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.prefs/java.util.prefs=ALL-UNNAMED']
}

jar {
    manifest {
        attributes 'Implementation-Title': 'spring-boot-starter-request-correlation',
                   'Implementation-Version': version
    }
}

repositories {
    jcenter()
}

configurations {
  archives
}

compileJava {
    options.fork = true
}

dependencies {
    implementation (libraries.springBootWeb)
    implementation (libraries.springCloudFeign)
    implementation (libraries.feignHttpClient)

    implementation (libraries.commonsLang)

    annotationProcessor (libraries.springConfigurationProcessor)

    testImplementation (libraries.springBootTest)
    testImplementation (libraries.junit)
    testImplementation (libraries.mockito)

}


